# auto-annotation-ml-backend

./: .gitignore  Cargo.toml  README.md  example_config.toml  sheld.toml
.github/workflows/: rust.yml
data/: instances_default.json
docs/: predict.md
src/: aaml.rs  cli.rs  config.rs  lib.rs  main.rs
src/handler/: mod.rs  predict.rs
src/model/: coco.rs  mod.rs
src/yolo/: inference.rs  mod.rs  v8.rs
